--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,6 @@ services:
     links:
       - db
     ports:
-      - 4040:80
+      - ${PHP_MY_ADMIN_PORT}:80
     volumes:
       - ./phpmyadmin/sessions:/sessions
